Worked on peakiness IRR

--- a/segmentation_report.Rmd
+++ b/segmentation_report.Rmd
@@ -87,12 +87,13 @@ mod %>% broom.mixed::tidy() %>%
 
 ## Interrater agreement and agreement with theory
 As the music theoretical predictions of segment border can be treated as "just another rater", the techniques applied for interrater agreement and agreement with theory are basically the same. The general problem here is the very fine grained resolution of 1 ms. Reaction times for humans are in the order of 500 ms, whereas intersegment intervals are in the order of several 10 seconds. This necessitates some form of binning or other bandwidth-based techniques, which introduces a free parameter a bin size or bandwidth, when comparing one of more segmentations. An alternative, parameter free techniques is dynamic time warping, which creates and aligment between to series of time points. However, for aggregating all participants segmenations in a single "collective" or average segmenation, a bandwidth parameter is still needed.
-Another problem is that segmentations are generally sparse in nature, typically in the order of  10 segments (mean number of segments = `r all_boundaries %>% group_by(p_id, piece, trial, source) %>% summarise(n = n(), .groups = "drop") %>% summarise(m_n = mean(n)) %>% pull(m_n)`) over a set of 322.000 to 421.000 thousand possible  points (using a millisecond resolution), Even after binning with a bandwidth of several seconds, this is still a problem. So, any metrics that counts true negatives is not well-suited as it will over estimated the agreement considerably. Another problem is to establish a suitable baseline to check whether the agreement is significantly different from a random segmentation.
+
+Another problem is that segmentations are generally sparse in nature, typically in the order of  10 segments (mean number of segments = `r all_boundaries %>% group_by(p_id, piece, trial, source) %>% summarise(n = n(), .groups = "drop") %>% summarise(m_n = mean(n)) %>% pull(m_n)`) over a set of several 100.000  possible  points (given a millisecond resolution), Even after binning with a bandwidth of several seconds, this is still a problem. So, any metrics that counts true negatives is not well-suited as it will over estimated the agreement considerably. Another problem is to establish a suitable baseline to check whether the agreement is significantly different from a random segmentation.
 
 ### Gaussification
 One method to move from a distribution of time points to a aggregated function is called Gaussification, which is a weighted sum of of Gaussians with the time points means and a free bandwidth parameter as standard deviations. If the weights are all equal then this is equivalent to a Gaussian kernel density estimation (up to normalization).
 
-Such a Gaussification (or probability denisty) then allows to create an aggregate segmentation by picking peaks (maxima). Another free parameter, a threshold can be used to filter the peaks further, e.g., keeping only the peaks with heights over the mean or the median of all peak heights or a fixed threshold. The is no one-to-one translation of peal height to number of participants, but approximately it can be said that the peak height is the averaged number of participants having a segmentation mark in a vicinity (with bandwith) of the peak. If N participants would have completely identical sets of segmentation marks, then this statement is exactly true, as one would add N (unnormalized) Gaussians over the same mean value in this case. The peak positions can also be approximately bve regarded as the mean position of segmentation markers in the vicinity of the peak, where the extension of the vicinity is determined by the bandwidth parameter. For a single segmentation the peaks of a Gaussification are obviously the segmentation marks themselves.
+Such a Gaussification (or probability density) then allows to create an aggregate segmentation by picking peaks (maxima). Another free parameter, a threshold can be used to filter the peaks further, e.g., keeping only the peaks with heights over the mean or the median of all peak heights or a fixed threshold. The is no one-to-one translation of peal height to number of participants, but approximately it can be said that the peak height is the averaged number of participants having a segmentation mark in a vicinity (with bandwith) of the peak. If *N*  participants would have completely identical sets of segmentation marks, then this statement is exactly true, as one would add *N* (unnormalized) Gaussians over the same mean value in this case. The peak positions can also be approximately regarded as the mean position of segmentation markers in the vicinity of the peak, where the extension of the vicinity is determined by the bandwidth parameter. For a single segmentation the peaks of a Gaussification are obviously the segmentation marks themselves.
 
 ### Dynamic Time Warping
 Dynamic time warping is a very power dynamic programming method to align to sets of points in a minimal depending on a cost function. The distances between align points can then be used as an indicator of similarity of the sets of time points. We used the ``dtw`` package for R, which returns a normalized distance value which we used for comparison. This value is depending on absolute offsets and time shifts, but we have here time points only between the start (0) and the end of the pieces (322 vs. 421 s), so this is not an issue.
@@ -108,7 +109,7 @@ One segmentation over the time span of 60 s has time points 10, 20, 30, 40, 50, 
 
 
 ###Interrater Agreement
-The heights of the peaks vs. the height of the troughs of a Gaussification of set of segmentations can be regarded as a measure of interrater agreement. If there is a lot of agreement, then segmentations are close to each other resulting in higher peaks and lower troughs. Numerically this can be expressed as the standard deviations of all peak heights.
+The heights of the peaks vs. the height of the troughs of a Gaussification of set of segmentations can be regarded as a measure of interrater agreement. If there is substantial agreement, segmentations are close to each other resulting in higher peaks and lower troughs. Numerically this can be expressed as the standard deviations of all peak heights.
 
 
 
